# all-inkl-kas-sdk

./: .env.example  .gitignore  LICENSE  README.md  debug_single_host.py  dns_update.py  ensure_ssl_hsts.py  example_usage.py  export_settings.py  kas_hsts_updater.py  pyproject.toml  readme_KAS_API_ORIGINAL.md  readme_KAS_API_SOURCE_OF_TRUTH.md  requirements.txt  verify_payloads.py
.github/workflows/: ci.yml
debug/: ssl_inspect_verbose.py
docs/: 01_account.md  02_domains_dns.md  03_email.md  04_system.md
kas_sdk/: __init__.py  client.py  exceptions.py  utils.py
kas_sdk/services/: __init__.py  account.py  base.py  chown.py  cronjob.py  database.py  ddns.py  directoryprotection.py  dkim.py  dns.py  domain.py  ftpuser.py  mailaccount.py  mailfilter.py  mailforward.py  mailinglist.py  sambauser.py  session.py  softwareinstall.py  ssl.py  statistic.py  subdomain.py  symlink.py
scripts/: dns_remove_wildcards.py  export_account.py  generate_source_of_truth.py
tests/: test_integration.py
