[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kas-sdk"
version = "1.0.0"
description = "Python SDK for the All-Inkl KAS SOAP API"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.0.0",
    "keyring>=25.0.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kas_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
